--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Vite App</title>
   </head>
-  <body>
+  <body class="bg-blue-200">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
